@@ -77,9 +77,9 @@ char       *status_get_speed_sec_dev                  (const hashcat_ctx_t *hash
 int         status_get_cpt_cur_min                    (const hashcat_ctx_t *hashcat_ctx);
 int         status_get_cpt_cur_hour                   (const hashcat_ctx_t *hashcat_ctx);
 int         status_get_cpt_cur_day                    (const hashcat_ctx_t *hashcat_ctx);
-int         status_get_cpt_avg_min                    (const hashcat_ctx_t *hashcat_ctx);
-int         status_get_cpt_avg_hour                   (const hashcat_ctx_t *hashcat_ctx);
-int         status_get_cpt_avg_day                    (const hashcat_ctx_t *hashcat_ctx);
+double      status_get_cpt_avg_min                    (const hashcat_ctx_t *hashcat_ctx);
+double      status_get_cpt_avg_hour                   (const hashcat_ctx_t *hashcat_ctx);
+double      status_get_cpt_avg_day                    (const hashcat_ctx_t *hashcat_ctx);
 char       *status_get_cpt                            (const hashcat_ctx_t *hashcat_ctx);
 int         status_get_salt_pos_dev                   (const hashcat_ctx_t *hashcat_ctx, const int backend_devices_idx);
 int         status_get_innerloop_pos_dev              (const hashcat_ctx_t *hashcat_ctx, const int backend_devices_idx);
