@@ -6,6 +6,7 @@
 
 - Fixed 'E' rule in pure kernel mode which was ignoring letters that are in positions that are multiples of 4
 - Fixed false negative in hash-mode 15900 (DPAPI masterkey file v2) if password was longer than 64 characters
+- Fixed integer overflow in Recovered/Time status view column caused by division > 0 but < 1
 
 ##
 ## Improvements
